--- a/templates/conference/show.html.twig
+++ b/templates/conference/show.html.twig
@@ -9,6 +9,10 @@
 		Conference</h2>
 
 	{% if comments|length > 0 %}
+		<div>There are
+			{{comments|length}}
+			comments.</div>
+
 		{% for comment in comments %}
 			{% if comment.photofilename %}
 				<img src="{{asset('uploads/photos/' ~ comment.photofilename)}}" style="max-width: 200px"/>
@@ -19,10 +23,16 @@
 				{{ comment.createdAt|format_datetime('medium', 'short') }}
 			</small>
 
-      <p>{{comment.text}}</p>
+			<p>{{comment.text}}</p>
 		{% endfor %}
-  {% else %}
-    <div>No comments have been posted yet for this conference.</div>
+		{% if previous >= 0 %}
+			<a href="{{path('conference', {id: conference.id, offset: previous})}}">Previous</a>
+		{% endif %}
+		{% if next < comments|length %}
+			<a href="{{path('conference', {id: conference.id, offset: next})}}">Next</a>
+		{% endif %}
+	{% else %}
+		<div>No comments have been posted yet for this conference.</div>
 	{% endif %}
 
 {% endblock %}
