--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,13 +22,14 @@
 			<h1>
 				<a href="{{path('homepage')}}">Guestbook</a>
 			</h1>
-			<ul>
+			{# <ul>
 				{% for conference in conferences %}
 					<li>
 						<a href="{{path('conference', {slug: conference.slug})}}">{{conference}}</a>
 					</li>
 				{% endfor %}
-			</ul>
+			</ul> #}
+			{{ render_esi(path('conference_header')) }}
 			<hr/>
 		</header>
 		{% block body %}{% endblock %}
